--- a/sobre.html
+++ b/sobre.html
@@ -12,6 +12,13 @@
     header {
         text-decoration: underline;
     }
+
+    .leaderboard{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
     
     </style>
     <title>Sobre</title>
@@ -38,6 +45,24 @@
         
         <p>- Isso é o que tem dentro da caixa! </p>
 
+        <div>
+            <img src="Imagens/resultado.png" alt="resultado" width="600px" height="400px">
+        </div>
+
+        <p>- Assim ficou o resultado do Ardurama.</p>
+
+        <div class="leaderboard">
+            <h3>LEADERBOARD</h3>
+            <ul>
+                <li>PEDRO - 15</li>
+                <li>GABRIEL - 15</li>
+                <li>FELIPE - 15</li>
+                <li>HENRIQUE - 15</li>
+                <li>LAURA - 15</li>
+                <li>DIOGO - 15</li>
+                <li>NICKO - 15</li>
+            </ul>
+        </div>
     </main>
     <footer>
 
