--- a/contato.html
+++ b/contato.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contato</title>
+    <link rel="stylesheet" href="styles/style.css">
+</head>
 <body class="pagina-contato">
     <h1>Contato</h1>
     <div class="contato-container">
@@ -18,50 +26,16 @@
             <button type="submit">Enviar</button>
         </form>
 
-    
         <ul class="integrantes">
             <li>
                 <div>
                     <p>Bárbara Cabral</p>
                     <p>babic.tech@gmail.com</p>
-                    <p><a href="https://www.linkedin.com/in/babicabral" target="_blank">LinkedIn</a></p>
+                    <p><a href="https://www.linkedin.com/in/babicabral" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
                 </div>
             </li>
             <li>
                 <div>
                     <p>Gabriel Barbosa</p>
                     <p>gabrielbarbossa196@gmail.com</p>
-                    <p><a href="https://www.linkedin.com/in/gabriel-ara%C3%BAjo-837734365" target="_blank">LinkedIn</a></p>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <p>Helena Loureiro</p>
-                    <p>helenamplou@gmail.com</p>
-                    <p><a href="https://www.linkedin.com/in/helena-loureiro-design/" target="_blank">LinkedIn</a></p>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <p>Luís Antônio Godoy</p>
-                    <p>nononha2020@gmail.com</p>
-                    <p><a href="https://www.linkedin.com/in/luis-antonio-godoy-idrissi-169829352/" target="_blank">LinkedIn</a></p>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <p>Rafael Henrique</p>
-                    <p>rafaelhsa306@gmail.com</p>
-                    <p><a href="https://www.linkedin.com/in/rafael-henrique-a34290363" target="_blank">LinkedIn</a></p>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <p>Caio Gilles</p>
-                    <p>cgcms@cesar.school</p>
-                    <p><a href="https://www.linkedin.com/in/caiogilles" target="_blank">LinkedIn</a></p>
-                </div>
-            </li>
-        </ul>
-    </div>
-</body>
+                    <p><a href="https://www.linkedin.com/in/gabriel-ara%C3%BAjo-837734365" target="_blank" rel="noopener_
