correção de erro

--- a/contato.html
+++ b/contato.html
@@ -38,4 +38,38 @@
                 <div>
                     <p>Gabriel Barbosa</p>
                     <p>gabrielbarbossa196@gmail.com</p>
-                    <p><a href="https://www.linkedin.com/in/gabriel-ara%C3%BAjo-837734365" target="_blank" rel="noopener_
+                    <p><a href="https://www.linkedin.com/in/gabriel-ara%C3%BAjo-837734365" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <p>Helena Loureiro</p>
+                    <p>helenamplou@gmail.com</p>
+                    <p><a href="https://www.linkedin.com/in/helena-loureiro-design/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <p>Luís Antônio Godoy</p>
+                    <p>nononha2020@gmail.com</p>
+                    <p><a href="https://www.linkedin.com/in/luis-antonio-godoy-idrissi-169829352/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <p>Rafael Henrique</p>
+                    <p>rafaelhsa306@gmail.com</p>
+                    <p><a href="https://www.linkedin.com/in/rafael-henrique-a34290363" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <p>Caio Gilles</p>
+                    <p>cgcms@cesar.school</p>
+                    <p><a href="https://www.linkedin.com/in/caiogilles" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
+                </div>
+            </li>
+        </ul>
+    </div>
+</body>
+</html>
