Criei estrutura html da página tutorial

--- a/tutorial-snake.html
+++ b/tutorial-snake.html
@@ -7,6 +7,35 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">SOBRE O PROJETO</a></li>
+                <li><a href="#">CONTATO</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="section-one-tutorial">
+            <h1>SNAKE 97' TUTORIAL</h1>
+        </section>
+        <section id="section-two-tutorial">
+            <table id="steps">
+                <tbody>
+                    <tr>
+                        <td>1 - Aperte qualque botão para <span class="sublinhado">iniciar o jogo</span></td>
+                        <td>2 - Aperte o botão da esquerda para girar a cobrinha 90° para a esquerda.</td>
+                        <td>3 - Aperte o botão da direita para girar a cobrinha 90° para a direita.</td>
+                    </tr>
+                    <tr>
+                        <td>4 - Você <span class="sublinhado">perde</span> se bater a cabeça em alguma parte do corpo da cobra.</td>
+                        <td>5 - Você <span class="sublinhado">ganha</span> se a cobrinha completar 15 segmentos.</td>
+                        <td>6 - Dica: sempre se guie pelo sentido de direção que a cobrinha está. Se divirta! (=</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </main>
 </body>
 </html>
