--- a/contato.html
+++ b/contato.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="pagina-contato">
+    <nav class="menu">
+        <p>Home</p>
+        <p>Sobre o Projeto</p>
+        <p>Contato</p>
+    </nav>
+    
     <h1>Contato</h1>
     <div class="contato-container">
         
