adicionei responsivo da section one

--- a/tutorial-snake.html
+++ b/tutorial-snake.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <section id="section-one-tutorial">
-            <h1>SNAKE 97' TUTORIAL</h1>
+            <h1>SNAKE 97'<br>TUTORIAL</h1>
         </section>
         <section id="section-two-tutorial">
             <table id="steps">
