criei html da página em breve

--- a/em-breve.html
+++ b/em-breve.html
@@ -6,6 +6,20 @@
     <title>Em breve</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">SOBRE O PROJETO</a></li>
+                <li><a href="#">CONTATO</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="section-em-breve">
+            <h1>em breve...</h1>
+        </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
