--- a/home.html
+++ b/home.html
@@ -13,18 +13,18 @@
     <h1>ARDURAMA</h1>
     <div class="games">
         <div class="game">
-            <img src="https://raw.githubusercontent.com/BabiCabral/Ardurama/refs/heads/main/Imagens/snake%20thumb.png?token=GHSAT0AAAAAADDT4LZHWCYL45NRRRMVRW7G2B7HVMA" alt="Snake 97">
+            <img src="Imagens/snake thumb.png" alt="Snake 97">
             <a href="" style="color: black;">SNAKE 97'</a>
             <div class="game-subtitle">JOGUE AGORA!</div>
             
         </div>
         <div class="game">
-            <img src="https://raw.githubusercontent.com/BabiCabral/Ardurama/refs/heads/main/Imagens/ping%20pong%20thumb.png?token=GHSAT0AAAAAADDT4LZGYJFEEY62XREO3VLO2B7HUNQ" alt="Ping Pong">
+            <img src="Imagens/ping pong thumb.png" alt="Ping Pong">
             <div class="game-title">PING PONG</div>
             <div class="game-subtitle">EM BREVE</div>
         </div>
         <div class="game">
-            <img src="https://raw.githubusercontent.com/BabiCabral/Ardurama/refs/heads/main/Imagens/arkanoid%20thumb.png?token=GHSAT0AAAAAADDT4LZG4HINNWVJQFEARDG62B7HTWQ" alt="Arkanoid">
+            <img src="Imagens/arkanoid thumb.png" alt="Arkanoid">
             <div class="game-title">ARKANOID</div>
             <div class="game-subtitle">EM BREVE</div>
         </div>
