Realizei ajustes finais

--- a/em-breve.html
+++ b/em-breve.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Em breve</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/responsive.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">SOBRE O PROJETO</a></li>
-                <li><a href="#">CONTATO</a></li>
+                <li><a href="home.html">HOME</a></li>
+                <li><a href="sobre.html">SOBRE O PROJETO</a></li>
+                <li><a href="contato.html">CONTATO</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section id="section-em-breve">
+        <section class="section-one">
             <h1>em breve...</h1>
         </section>
     </main>
