--- a/home.html
+++ b/home.html
@@ -10,29 +10,37 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>ARDURAMA</h1>
-    <div class="games">
-        <div class="game">
-            <img src="Imagens/snake thumb.png" alt="Snake 97">
-            <a href="" style="color: black;">SNAKE 97'</a>
-            <div class="game-subtitle">JOGUE AGORA!</div>
-            
-        </div>
-        <div class="game">
-            <img src="Imagens/ping pong thumb.png" alt="Ping Pong">
-            <div class="game-title">PING PONG</div>
-            <div class="game-subtitle">EM BREVE</div>
-        </div>
-        <div class="game">
-            <img src="Imagens/arkanoid thumb.png" alt="Arkanoid">
-            <div class="game-title">ARKANOID</div>
-            <div class="game-subtitle">EM BREVE</div>
-        </div>
-    </div>
-    <div class="footer">
-        <a href="">SOBRE O PROJETO</a>
-        <a href="">CONTATO</a>
-    </div>
-    
+    <main>
+        <section class="section-one">
+            <h1>ARDURAMA</h1>
+        </section>
+        <section class="section-one">
+            <div class="games">
+                <div class="game">
+                    <img src="Imagens/snake thumb.png" alt="Snake 97">
+                    <div class="game-title"><a href="tutorial-snake.html">SNAKE 97'</a></div>
+                    <div class="game-subtitle">JOGUE AGORA!</div>
+                </div>
+                <div class="game">
+                    <img src="Imagens/ping pong thumb.png" alt="Ping Pong">
+                    <div class="game-title"><a href="em-breve.html">PING PONG</a></div>
+                    <div class="game-subtitle">EM BREVE</div>
+                </div>
+                <div class="game">
+                    <img src="Imagens/arkanoid thumb.png" alt="Arkanoid">
+                    <div class="game-title"><a href="em-breve.html">ARKANOID</a></div>
+                    <div class="game-subtitle">EM BREVE</div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="sobre.html">SOBRE O PROJETO</a></li>
+                <li><a href="contato.html">CONTATO</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
