--- a/tutorial-snake.html
+++ b/tutorial-snake.html
@@ -11,17 +11,17 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">SOBRE O PROJETO</a></li>
-                <li><a href="#">CONTATO</a></li>
+                <li><a href="home.html">HOME</a></li>
+                <li><a href="sobre.html">SOBRE O PROJETO</a></li>
+                <li><a href="contato.html">CONTATO</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section id="section-one-tutorial">
+        <section class="section-one">
             <h1>SNAKE 97'<br>TUTORIAL</h1>
         </section>
-        <section id="section-two-tutorial">
+        <section class="section-two">
             <table id="steps">
                 <tbody>
                     <tr>
