--- a/contato.html
+++ b/contato.html
@@ -7,77 +7,73 @@
     <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body class="pagina-contato">
-
-    <nav class="menu">
-        <p>Home</p>
-        <p>Sobre o Projeto</p>
-        <p>Contato</p>
-    </nav>
-
-    <h1>Contato</h1>
-
-    <div class="contato-container">
-        <form action="#" method="POST">
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" required />
-
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" required />
-
-            <label for="assunto">Assunto:</label>
-            <input type="text" id="assunto" name="assunto" required />
-
-            <label for="mensagem">Mensagem:</label>
-            <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
-
-            <button type="submit">Enviar</button>
-        </form>
-
-        <ul class="integrantes">
-            <li>
-                <div>
-                    <p>Bárbara Cabral</p>
-                    <p>babic.tech@gmail.com</p>
-                    <p><a href="https://www.linkedin.com/in/babicabral" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <p>Gabriel Barbosa</p>
-                    <p>gabrielbarbossa196@gmail.com</p>
-                    <p><a href="https://www.linkedin.com/in/gabriel-ara%C3%BAjo-837734365" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <p>Helena Loureiro</p>
-                    <p>helenamplou@gmail.com</p>
-                    <p><a href="https://www.linkedin.com/in/helena-loureiro-design/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <p>Luís Antônio Godoy</p>
-                    <p>nononha2020@gmail.com</p>
-                    <p><a href="https://www.linkedin.com/in/luis-antonio-godoy-idrissi-169829352/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <p>Rafael Henrique</p>
-                    <p>rafaelhsa306@gmail.com</p>
-                    <p><a href="https://www.linkedin.com/in/rafael-henrique-a34290363" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <p>Caio Gilles</p>
-                    <p>cgcms@cesar.school</p>
-                    <p><a href="https://www.linkedin.com/in/caiogilles" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
-                </div>
-            </li>
-        </ul>
-    </div>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="home.html">HOME</a></li>
+                <li><a href="sobre.html">SOBRE O PROJETO</a></li>
+                <li><a href="contato.html">CONTATO</a></li>
+            </ul>
+        </nav>
+    </header>
+        <h1>Contato</h1>
+        <div class="contato-container">
+            <form action="#" method="POST">
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome" required />
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email" required />
+                <label for="assunto">Assunto:</label>
+                <input type="text" id="assunto" name="assunto" required />
+                <label for="mensagem">Mensagem:</label>
+                <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
+                <button type="submit">Enviar</button>
+            </form>
+            <ul class="integrantes">
+                <li>
+                    <div>
+                        <p>Bárbara Cabral</p>
+                        <p>babic.tech@gmail.com</p>
+                        <p><a href="https://www.linkedin.com/in/babicabral" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <p>Gabriel Barbosa</p>
+                        <p>gabrielbarbossa196@gmail.com</p>
+                        <p><a href="https://www.linkedin.com/in/gabriel-ara%C3%BAjo-837734365" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <p>Helena Loureiro</p>
+                        <p>helenamplou@gmail.com</p>
+                        <p><a href="https://www.linkedin.com/in/helena-loureiro-design/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <p>Luís Antônio Godoy</p>
+                        <p>nononha2020@gmail.com</p>
+                        <p><a href="https://www.linkedin.com/in/luis-antonio-godoy-idrissi-169829352/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <p>Rafael Henrique</p>
+                        <p>rafaelhsa306@gmail.com</p>
+                        <p><a href="https://www.linkedin.com/in/rafael-henrique-a34290363" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <p>Caio Gilles</p>
+                        <p>cgcms@cesar.school</p>
+                        <p><a href="https://www.linkedin.com/in/caiogilles" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    <footer></footer>
 </body>
 </html>
