correção index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/responsive.css">
 </head>
 <body>
     <main>
@@ -17,17 +18,17 @@
         <section class="section-one">
             <div class="games">
                 <div class="game">
-                    <img src="Imagens/snake thumb.png" alt="Snake 97">
+                    <a href="tutorial-snake.html"><img src="Imagens/snake thumb.png" alt="Snake 97"></a>
                     <div class="game-title"><a href="tutorial-snake.html">SNAKE 97'</a></div>
                     <div class="game-subtitle">JOGUE AGORA!</div>
                 </div>
                 <div class="game">
-                    <img src="Imagens/ping pong thumb.png" alt="Ping Pong">
+                    <a href="em-breve.html"><img src="Imagens/ping pong thumb.png" alt="Ping Pong"></a>
                     <div class="game-title"><a href="em-breve.html">PING PONG</a></div>
                     <div class="game-subtitle">EM BREVE</div>
                 </div>
                 <div class="game">
-                    <img src="Imagens/arkanoid thumb.png" alt="Arkanoid">
+                    <a href="em-breve.html"><img src="Imagens/arkanoid thumb.png" alt="Arkanoid"></a>
                     <div class="game-title"><a href="em-breve.html">ARKANOID</a></div>
                     <div class="game-subtitle">EM BREVE</div>
                 </div>
