--- a/contato.html
+++ b/contato.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Contato</title>
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/style.css"/>
+    <link rel="stylesheet" href="styles/responsive.css">
 </head>
 <body class="pagina-contato">
     <header>
         <nav>
             <ul>
-                <li><a href="home.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="sobre.html">SOBRE O PROJETO</a></li>
                 <li><a href="contato.html">CONTATO</a></li>
             </ul>
