--- a/em-breve.html
+++ b/em-breve.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="home.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="sobre.html">SOBRE O PROJETO</a></li>
                 <li><a href="contato.html">CONTATO</a></li>
             </ul>
